Fixed transformations in home page and tranfromation page,fixed correct sizing of before after images and removed unwanted spacing from smart phone size devices

--- a/public/styles.css
+++ b/public/styles.css
@@ -2031,7 +2031,7 @@ footer a:hover{color:#fff;}
 
 .transformation-slider {
   width: 100%;
-  height: 400px;
+  max-height: 400px;
   margin: 0 auto;
 }
 
